# tinygraphics_client

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pbrapp.cpp  pbrapp.h
scripts/: CloneGitRepo.cmake  SetupDeps.cmake  SetupGLEW.cmake  SetupGLFW.cmake  SetupGLM.cmake  SetupTinygraphics.cmake
